--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,24 +1,35 @@
-<h1 style="text-align: center">Edit Book Details</h1>
+<h1 style="text-align: center">Edit Book</h1>
 
-<%= form_with model: @book, url: "/book/update/#{@book.id}", data: { turbo: false }, method: :patch, local: true do |f| %>
+<%= form_with model: @book, url: "/book/update/#{@book.id}", data: { turbo: false }, method: :post, local: true do |f| %>
   <p>
     <%= f.label :book_title, "Book Title" %><br>
     <%= f.text_field :book_title %>
   </p>
 
   <div class="dropdown">
-    <%= f.label :author_ids, "Authors" %>
-    <ul class="dropdown-menu" style="max-height: 200px; overflow-y: auto;">
-    <% @authors.each do |author| %>
-        <li class="dropdown-item">
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="book[author_ids][]" value="<%= author.id %>" id="author_<%= author.id %>">
-            <label class="form-check-label" for="author_<%= author.id %>">
-                <%= author.first_name %> <%= author.last_name %>
-            </label>
-        </div>
+    <%= f.label :author_ids, "Select Authors" %><br>
+
+    <!-- Smaller search input -->
+    <input type="text" id="author-search" placeholder="Search authors..." style="margin-bottom: 10px; width: 200px; padding: 5px;">
+
+    <!-- Author list -->
+    <ul id="author-list" style="display: none; max-height: 150px; overflow-y: auto; list-style: none; padding: 0; margin: 0; border: 1px solid #ccc; width: 200px;">
+      <%# Show all authors with checkboxes, and check the ones already selected in @book.author_ids %>
+      <% selected_ids = @book.author_ids.map(&:to_i) %>
+      <% @authors
+        .each do |author| %>
+        <li class="dropdown-item" style="padding: 5px;">
+          <label style="cursor: pointer;">
+            <input
+              type="checkbox"
+              name="book[author_ids][]"
+              value="<%= author.id %>"
+              <%= "checked" if selected_ids.include?(author.id) %>
+            >
+            <%= author.first_name %> <%= author.last_name %>
+          </label>
         </li>
-    <% end %>
+      <% end %>
     </ul>
   </div>
 
